# spiny

./: .gitignore  LICENSE  README.md  build.sbt  fusesoc.conf
examples/blinky/: README.md  blinky.core
examples/blinky/data/: blinky.xdc  nexys7-a100t.xdc  vivado_settings.tcl
examples/blinky/fw/: .neoconf.json  Cargo.toml  Makefile  blinky.asm
examples/blinky/fw/.cargo/: config.toml
examples/blinky/fw/src/: main.rs
examples/blinky/spinal/: Blinky.scala
examples/blinky/src/spinal/: Blinky.scala
fusesoc/: cargo.py  generators.core  litedram_gen.py  makefile.py  rustpac.py  spinalhdl.py
spinal/spiny/: Utils.scala
spinal/spiny/blackbox/: Xilinx.scala
spinal/spiny/bus/: AddressMapped.scala  BusDef.scala  package.scala
spinal/spiny/cpu/: Cpu.scala  CpuProfile.scala  MainRam.scala
spinal/spiny/dram/: Dram.scala  DramIo.scala  LiteDram.scala  LiteDramConfig.scala
spinal/spiny/interconnect/: Apb3Interconnect.scala
spinal/spiny/peripheral/: Ethernet.scala  Gpio.scala  Peripheral.scala  Timer.scala  package.scala
spinal/spiny/peripherals/: Gpio.scala
spinal/spiny/sim/: DramNativePortDriver.scala  PipelinedMemoryBusDriver.scala
spinal/spiny/soc/: Apb3Interconnect.scala  Cpu.scala  CpuProfile.scala  MainRam.scala  SoC.scala
spinal/spiny/svd/: Svd.scala  SvdPeripheral.scala
spinal/spiny/vexriscv/: CpuBusDef.scala  RiscvCpu.scala  RiscvProfile.scala
src/spinal/spinaltools/: AddressMapped.scala  BusDef.scala  Utils.scala
src/spinal/spinaltools/bus/: BusDef.scala
src/spinal/spinaltools/mapped/: AddressMapped.scala
